--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
+    "electron-store": "^6.0.1",
     "tailwindcss": "^2.0.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vuex-electron": "^1.0.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
